<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        style="@style/FrameLayout_Standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            style="@style/ImageView_Standard"
            app:srcCompat="@android:drawable/star_big_on" />

        <TextView
            android:id="@+id/tv_output"
            style="@style/TextView_Standard"
            android:textAlignment="center" />
    </FrameLayout>

    <LinearLayout
        style="@style/LinearLayout_Standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.407">

        <TextView
            android:id="@+id/tv_backColor"
            style="@style/TextView_Standard"
            android:text="@string/background_color_label" />

        <RadioGroup
            android:id="@+id/backgroundColorRadioGroup"
            style="@style/RadioGroup_Standard">

            <RadioButton
                android:id="@+id/bCGRadioBtn1"
                style="@style/RadioButton_Standard"
                android:text="@string/radioBtn_Color1" />

            <RadioButton
                android:id="@+id/bCGRadioBtn2"
                style="@style/RadioButton_Standard"
                android:text="@string/radioBtn_Color2" />

            <RadioButton
                android:id="@+id/bCGRadioBtn3"
                style="@style/RadioButton_Standard"
                android:checked="true"
                android:text="@string/radioBtn_Color3" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_inputField"
            style="@style/EditText_Standard" />

        <TextView
            android:id="@+id/tv_textColor"
            style="@style/TextView_Standard"
            android:text="@string/text_color_label" />

        <RadioGroup
            android:id="@+id/textColorRadioGroup"
            style="@style/RadioGroup_Standard">

            <RadioButton
                android:id="@+id/tCRadioBtn1"
                style="@style/RadioButton_Standard"
                android:text="@string/radioBtn_Color1" />

            <RadioButton
                android:id="@+id/tCRadioBtn2"
                style="@style/RadioButton_Standard"
                android:text="@string/radioBtn_Color2" />

            <RadioButton
                android:id="@+id/tCRadioBtn3"
                style="@style/RadioButton_Standard"
                android:checked="true"
                android:text="@string/radioBtn_Color3" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_textStyle"
            style="@style/TextView_Standard"
            android:text="@string/text_style_optional" />

        <Switch
            android:id="@+id/textStyle_switch"
            style="@style/Switch_Standard" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>